--- a/docs/main.tex
+++ b/docs/main.tex
@@ -19,7 +19,7 @@
 	% set page numbering to roman for the contents list
 	\pagenumbering{roman}
 	\tableofcontents
-	\listoftodos
+	%\listoftodos  % uncomment to show todo list
 	\clearpage
 
 	% reset page counter so the first chapter is on page 1
