added information about non-working USB blasters in docs

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -29,4 +29,5 @@
 	% main content
 	\include{./chap/hardware/chapter.tex}
 	\include{./chap/software/chapter.tex}
+	\include{./chap/programmer/chapter.tex}
 \end{document}
